<resources>
    <string name="app_name">InkanBike</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="USER">Usuario</string>
    <string name="EMAIL">Correo</string>
    <string name="PASS">Contraseña</string>
    <string name="PASS_REPEAT">Repita la contraseña</string>
    <string name="NAME">Nombre</string>
    <string name="ADDRESS">Dirección</string>
    <string name="LOGIN">Ingresar</string>
    <string name="JOIN">Unirse</string>
    <string name="REGISTER">Registrarse</string>
    <string name="title_activity_inkan">InkanActivity</string>
    <string name="login_title">Login</string>
    <string name="LOGIN_FAIL">Email y/o Contraseña incorrectos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_garage">Añadir Taller</string>
    <string name="NO_NET">Inkanbike necesita de una conexión a internet</string>
    <string name="SEND_SOS_USERS">Enviando SOS a usuarios cercanos</string>
    <string-array name="SOS_ARRAY">
        <item>Pinchazo</item>
        <item>Rueda</item>
        <item>Frenos</item>
        <item>Cadena</item>
        <item>Otro...</item>
        <item>Robo!!!</item>
    </string-array>
    <string name="SOS_FLAT_TIRE">Pinchazo</string>
    <string name="SOS_TIRE">Rueda</string>
    <string name="SOS_BRAKE">Frenos</string>
    <string name="SOS_CHAIN">Cadena</string>
    <string name="SOS_OTHER">Otro...</string>
    <string name="SOS_THIEFT">Robo!!!</string>
    <string name="SOS">Alerta SOS</string>
    <string name="nav_index_sos">SOS Inkanbike</string>
    <string name="nav_upload_garage">Añadir nuevo taller</string>
    <string name="nav_mi_bike">Mis bicicletas</string>
    <string name="nav_setting">Ajustes</string>
    <string name="nav_log_out">Cerrar sesion</string>
    <string name="BRAND">Marca</string>
    <string name="MODEL">Modelo</string>
    <string name="SERIAL_NUMBER">Número de serie</string>
    <string name="OTHERS">Otras caracteristicas</string>
    <string name="PASS_NOT_EQUALS">Las Contraseñas no coinciden</string>
    <string name="EMAIL_REGISTERED">Ya tienes una cuenta con el correo ingresado</string>
    <string name="GARAGE_OK">Taller añadido correctamente</string>
    <string name="SOS_RESP_OK">Estamos avisando que vas en camino</string>
</resources>
