<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_index_sos" android:icon="@drawable/ic_voice_black_18dp"
            android:title="@string/nav_index_sos" />
        <item android:id="@+id/nav_upload_garage" android:icon="@drawable/ic_cloud_upload_black_18dp"
            android:title="@string/nav_upload_garage" />
        <item android:id="@+id/nav_mi_bike" android:icon="@drawable/ic_bike_black_18dp"
            android:title="@string/nav_mi_bike" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_setting" android:icon="@drawable/ic_settings_black_18dp"
                android:title="@string/nav_setting" />
            <item android:id="@+id/nav_log_out" android:icon="@drawable/ic_logout_black_18dp"
                android:title="@string/nav_log_out" />
        </menu>
    </item>

</menu>