<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity$PlaceholderFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/logo_login" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EMAIL"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">
            <EditText
                android:id="@+id/emailIng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">
            <EditText
                android:id="@+id/passIng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PASS"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/LOGIN" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="ChangeRight"
        android:text="@string/REGISTER"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>