<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/openCam"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center_vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_grey600_48dp"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/bikeImg"
                    android:scaleType="fitXY"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/BRAND"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idBrand"
                    android:inputType="text"
                    android:layout_gravity="center_horizontal" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MODEL"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idModel"
                    android:inputType="text"
                    android:layout_gravity="center_horizontal" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SERIAL_NUMBER"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idSnumber"
                    android:inputType="textWebEditText"
                    android:layout_gravity="center_horizontal" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/OTHERS"
                app:hintTextAppearance="@style/TextAppearance.AppCompat">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="5"
                    android:id="@+id/idOthers"
                    android:layout_gravity="center_horizontal" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Add"
                android:id="@+id/addBike"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
</LinearLayout>
</ScrollView>